--- a/css/style.css
+++ b/css/style.css
@@ -4,27 +4,50 @@
     box-sizing: border-box;
 }
 
+html, body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body{
     height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
+header {
+    position: relative;
+    background-color: black;
+    min-height: 60px;
+}
 
-header, main, footer{
+.grid-icon, .expand-icon {
+    color: white;
+    font-size: 16px;
+    position: absolute;
+    background-color: #4A4A4A;
+    border-radius: 10px;
+    text-align: center;
+    line-height: 30px;
+    height: 30px;
+    top: 10px;
+}
+
+header .grid-icon {
+    right: 60px;
+    width: 150px;
+}
+
+header .expand-icon {
+    width: 40px;
+    right: 10px;
+}
+
+main, footer{
     border: 1px dashed red;
-    min-height: 100px;
+    min-height: 80px;
 }
 
 main {
     flex-grow: 1;
     overflow: auto;
-}
-
-.container {
-    background-color: red;
-    max-width: 1920px;
-    width: 100%;
-    margin: 0 auto;
-    
 }
