--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body{
 header {
     position: relative;
     background-color: black;
-    min-height: 60px;
+    height: 60px;
 }
 
 .grid-icon, .expand-icon {
@@ -42,7 +42,7 @@ header .expand-icon {
     right: 10px;
 }
 
-main, footer{
+main{
     border: 1px dashed red;
     min-height: 80px;
 }
@@ -50,4 +50,68 @@ main, footer{
 main {
     flex-grow: 1;
     overflow: auto;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: black;
+    height: 70px;
+    color: white;
+    font-size: 30px;
+}
+
+.left-section {
+    display: flex;
+    margin-left: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-icons {
+    margin-right: 10px;
+    text-align: center;
+}
+
+.text-icon {
+    font-size: 16px;
+}
+
+.caret-icon {
+    font-size: 20px;
+    margin-right: 20px;
+}
+
+.central-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.central-icons {
+    margin-right: 10px;
+    text-align: center;
+}
+
+.share-icon {
+    color: rgb(5, 193, 5);
+}
+
+.text-icon-share-screen {
+    color: white;
+    font-size: 16px;
+}
+
+
+
+
+.leave-meeting {
+    color: red;
+    font-size: 16px;
+    background-color: #4A4A4A;
+    height: 70px;
+    width: 150px;
+    text-align: center;
+    line-height: 70px;
 }
