--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,36 @@ header .expand-icon {
     right: 10px;
 }
 
-main{
-    border: 1px dashed red;
-    min-height: 80px;
-}
-
 main {
     flex-grow: 1;
     overflow: auto;
+    background-color: black;
+    padding: 20px 60px;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1rem 0.5rem;
+    margin: 20px auto;
+    background-color: black;
+    height: auto;
+}
+
+.card {
+    position: relative;
+    height: 150px;
+    background-color: yellowgreen;
+    flex-basis: 250px;   
+}
+
+.card img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 footer {
@@ -102,9 +124,6 @@ footer {
     color: white;
     font-size: 16px;
 }
-
-
-
 
 .leave-meeting {
     color: red;
